2018-01-02  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-913
	
	Preparing for allowing sparsening grids for 
	line-by-line absorption.  Only useful part of
	this commit is range of ranges, which is probably
	incredibly inefficient so it should only be used
	sparsely (pun unavoidable?).  This comes from discussions
	with Oliver and Stefan (where I think we went wrong
	in wanting 2^N instead of 2^N + 1 grid-points, so the
	present idea I am working on implements the latter --- 
	otherwise there is no central point and the ranging 
	becomes by ignoring the right-hand.  With 2^N + 1 you
	avoid this and can still perfectly predict the computation
	sizes)

	* src/absorption.cc:  Added temporarily named functions for
	the sparsening grids.

	* src/linerecord.{h,cc}:  Added SPD and mspeedup as variables
	to be used as coefficients in the speedup-calculations.
	
	* src/matpackI_h:  Added what is probably a poor implementation
	of range of range.  I need this feature in my working python
	version and I cannot go away from this idea without adding a lot
	of complexity to the code.  I hope the implementation can be 
	improved some.

2018-01-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-912

	* src/m_jacobian.cc (jacobianAdjustAndTransform): Empty jacobian
	was not fully handled correctly (the method must accept this,
	otherwise can not be part of inversion_iteration_agenda).

	* src/jacobian.cc (transform_jacobian): Bug fix regarding
	scaling associated with log and log10.

	* src/m_jacobian.cc (jacobianSetFuncTransformation): Added option
	"none".

2018-01-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-911

	* jacobian_indices no longer exists as a WSM. Removed it, as after
	the introduction of affine tranformations, the Jacobian can have
	two sizes. Instead of introducing a seocnd WSM, it seemed easier
	and less confusing to remove the WSV and instead calculate the
	indices where needed.
